# space

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  camera.cc  camera.h  error.cc  error.h  glad.cc  imgui.ini  main.cc  main.cc.d  main_container.cc.temp  main_texture.cc.temp  mesh.cc  mesh.h  model.cc  model.h  shader.cc  shader.h  stab_image.cc  strings.cc  texture.cc  texture.h
assets/light_bulb/: light_bulb.mtl
core/: mesh_object.cc  mesh_object.h  object_3d.cc  object_3d.h
deprecated/: camera.cc  camera.h  error.cc  main.cc  mesh.h  model.cc  model.h  shader.cc  shader.h  strings.h
loaders/: obj_loader.cc  obj_loader.h
shaders/: brdf_lut.fs  brdf_lut.vs  color_shader.fs  color_shader.vs  equirect_to_cubemap.fs  irradiance_convolution.fs  light_shader.fs  light_shader.vs  material_shader.fs  material_shader.vs  model_shader.fs  model_shader.vs  pbr_shader.fs  pbr_shader.vs  prefilter.fs  prefilter.vs  tex_shader.fs  tex_shader.vs
src/: CMakeLists.txt  render_config.h
src/core/: camera_object.cc  camera_object.h  geometry.cc  geometry.h  material.cc  material.h  mesh_object.cc  mesh_object.h  object_3d.cc  object_3d.h  scene_object.h
src/errors/: gl_error.cc  gl_error.h
src/loaders/: gltf_loader.cc  gltf_loader.h  obj_loader.cc  obj_loader.h
src/renders/: gl_binding_state.cc  gl_binding_state.h  gl_framebuffer.cc  gl_framebuffer.h  gl_global_resouces.cc  gl_global_resouces.h  gl_ibl.cc  gl_ibl.h  gl_program.cc  gl_program.h  gl_renderer.cc  gl_renderer.h  gl_texture.cc  gl_texture.h  i_renderer.h
test/: CMakeLists.txt  cmake_test_discovery_64fb46a631.json  obj_loader_test.cc  space_test
